# hdl_people_tracking

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
apps/: hdl_people_detection_nodelet.cpp  hdl_people_tracking_nodelet.cpp
data/: boost_kidono.scale
include/hdl_people_detection/: background_subtractor.hpp  cluster.hpp  cluster_detector.hpp  kidono_feature_extractor.hpp  kidono_human_classifier.h  marcel_people_detector.hpp  people_detector.h
include/hdl_people_tracking/: kalman_tracker.hpp  people_tracker.hpp
include/kkl/alg/: data_association.hpp  dp_means.hpp  global_nearest_neighbor_association.hpp  kalman_filter.hpp  munkres.hpp  nearest_neighbor_association.hpp
include/kkl/cvk/: cvutils.hpp
include/kkl/math/: gaussian.hpp
include/kkl/ml/: svm_scale.hpp
launch/: hdl_people_tracking.launch  hdl_people_tracking_static.launch
msg/: Cluster.msg  ClusterArray.msg  Track.msg  TrackArray.msg
src/: kidono_human_classifier.cpp  people_detector.cpp
